# codedj-ecoop-artifact

./: .gitignore  0-prerequisites.Rmd  1-getting-started.Rmd  2-case-study.Rmd  2.1-case-study-dataset.Rmd  2.2-case-study-project-selection.Rmd  2.3-case-study-data-analysis and graphs.Rmd  2.3-case-study-data-analysis-and-graphs.Rmd  3-caching-performance.Rmd  CodeDJ Artifact for ECOOP 2021.odt  README.Rmd  README.md  toy-dataset-repositories.csv
fse/: reference.csv
models/: changes.csv  commits.csv  expa.csv  expr.csv  issues.csv  messages.csv  stars.csv
models/ts_by_year/2013/: 100002013_new.csv  10002013_new.csv  1000_2013.csv  10012013_new.csv  1002013_new.csv  10022013_new.csv  10032013_new.csv  10042013_new.csv  10052013_new.csv  10062013_new.csv  10072013_new.csv  10082013_new.csv  10092013_new.csv  100_2013.csv  10102013_new.csv  10112013_new.csv  1012013_new.csv  10122013_new.csv  10132013_new.csv  10142013_new.csv  10152013_new.csv  10162013_new.csv  10172013_new.csv  101_2013.csv  (+10976 more)
paper-queries/: README.md
paper-queries/src/: lib.rs
pregenerated/: top_1_project_by_stars_in_each_language.csv
pregenerated/my-query-crate/: README.md
queries/my-query-crate/: Cargo.toml
queries/paper/: Cargo.toml
query-results/getting-started/: pregenerated_top_1_project_by_stars_in_each_language.csv
query-results/paper/: all_issues.list  commits.list  experienced_authors.list  experienced_authors_ratio.list  mean_changes_in_commits.list  median_commit_message_sizes.list  stars.list
scripts/: alex.py  download.sh  generate-crate.sh  implementation.R  setup.sh
(+77002 files in other folders)
